@@ -3,6 +3,7 @@ This file documents the revision history for mod_gearman.
 next:
           - neb: fix gearmand memory leak (#167)
           - gearman_top: fix extracting gearmand version
+          - fix base64 decode errors if source contains newlines
 
 5.1.0 Wed Mar  8 08:24:27 CET 2023
           - reopen logfile after core rotation
